[package]
name = "acanet_landing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.4"
borsh = { version = "1.4.0", features = ["derive"] }

[lib]
name = "acanet_landing"
crate-type = ["cdylib", "lib"]
